feat(infra): add aws ecs deployment stack and cloud verification
planned-date: 2026-02-19

why: close portfolio cloud deployment gaps with reproducible AWS IaC and deployment workflows.

what: add Terraform for ECS/RDS/ElastiCache/ALB/ECR, deployment and teardown scripts, cloud smoke checks, workflow-dispatch Terraform pipeline, and README/docs updates.

verification: ran bash -n on deploy/teardown/cloud-smoke scripts and validated live /api/health endpoint status checks.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ coverage/
 postgres_data/
 redis_data/
 grafana_data/
+terraform/.terraform/
+terraform/*.tfstate*
+terraform/*.tfplan
+terraform/.terraform.lock.hcl
